// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addPoznamka [not authenticated] 1`] = `
Object {
  "code": "authentication token invalid",
  "status": "Špatný ověřovací token. Zkus se přihlásit znovu. Detaily: JsonWebTokenError: jwt must be provided",
}
`;

exports[`addPoznamka - dosud žádné poznámky 1`] = `
Object {
  "code": "ok",
  "response": Object {
    "poznamky": Array [
      Object {
        "datum": "2018-04-01T18:42:12.234Z",
        "text": "první poznámka",
      },
    ],
  },
  "status": "uloženo v pořádku",
}
`;

exports[`addPoznamka - dosud žádné poznámky 2`] = `
Array [
  Object {
    "__v": 1,
    "ucasti": Array [
      Object {
        "platby": Array [],
        "poznamky": Array [
          Object {
            "datum": 2018-04-01T18:42:12.234Z,
            "text": "první poznámka",
          },
        ],
        "rok": 2018,
        "udaje": Object {
          "jmeno": "František",
          "narozeni": Object {
            "rok": 1953,
          },
          "obec": "Ostrava 1",
          "pohlavi": "muž",
          "prijmeni": "Balabák",
          "stat": "Česká republika",
        },
      },
    ],
  },
]
`;

exports[`addPoznamka - existující poznámky 1`] = `
Object {
  "code": "ok",
  "response": Object {
    "poznamky": Array [
      Object {
        "datum": "2018-02-07T00:00:00.000Z",
        "text": "první přihlášený",
      },
      Object {
        "datum": "2018-04-01T18:42:12.234Z",
        "text": "prostřední poznámka",
      },
      Object {
        "datum": "2018-06-08T00:00:00.000Z",
        "text": "možná se odhlásí",
      },
    ],
  },
  "status": "uloženo v pořádku",
}
`;

exports[`addPoznamka - existující poznámky 2`] = `
Array [
  Object {
    "__v": 1,
    "ucasti": Array [
      Object {
        "platby": Array [],
        "poznamky": Array [
          Object {
            "datum": 2018-02-07T00:00:00.000Z,
            "text": "první přihlášený",
          },
          Object {
            "datum": 2018-04-01T18:42:12.234Z,
            "text": "prostřední poznámka",
          },
          Object {
            "datum": 2018-06-08T00:00:00.000Z,
            "text": "možná se odhlásí",
          },
        ],
        "rok": 2018,
        "udaje": Object {
          "jmeno": "František",
          "narozeni": Object {
            "rok": 1953,
          },
          "obec": "Ostrava 1",
          "pohlavi": "muž",
          "prijmeni": "Balabák",
          "stat": "Česká republika",
        },
      },
    ],
  },
]
`;

exports[`účastník neexistuje 1`] = `
Object {
  "code": "neexistuje",
  "status": "Účastník s id 41224d776a326fb40f000001 neexistuje.",
}
`;
